Avoid styling the scrollbar on macos

--- a/apps/desktop/src/styles/theme.css
+++ b/apps/desktop/src/styles/theme.css
@@ -106,7 +106,7 @@
 }
 
 @layer utilities {
-  .overflow-y-auto {
+  .platform-windows .overflow-y-auto {
     @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-black-transparent-40;
   }
 }
